--- a/pics/templates/index.html
+++ b/pics/templates/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <h1>It worked</h1>
+    <h1 class="text-center"><strong>Gallery</strong></h1>
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
