--- a/pics/templates/index.html
+++ b/pics/templates/index.html
@@ -1,27 +1,21 @@
-{% load bootstrap3 %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title%}
-    <title>Gallery - {{title}}</title>
-    {% else %}
-    <title>Gallery</title>
-    {% endif %}
+{% extends 'base.html' %}
+    
+{% block content %}
+{{block.super}}
+    
+    <h1 class="text-center">Gallery</h1>
 
-    {% block styles %}
-        {% bootstrap_css %}
-    {% endblock %}
+    <div class="row">
+        {% for image in images %}
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <div class="view view-eighth">
+                <img src="{{image.image.url}}" class=" img img-responsive" class="rounded float-left" alt="Image" width="500px" height="500px">
+                <div class="mask">
+                    <h3 class="text-center"> {{ image.image_name }} </h3>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+{% endblock %}
 
-</head>
-<body>
-    <h1 class="text-center"><strong>Gallery</strong></h1>
-
-    {% block scripts %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     {% bootstrap_javascript %}
-    {% endblock %}
-</body>
-</html>
