--- a/pics/templates/base.html
+++ b/pics/templates/base.html
@@ -15,6 +15,7 @@
     {% block styles %}
         {% bootstrap_css %}
         <link rel="stylesheet" href="{% static 'css/index.css' %}">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
