Add styling to images

--- a/pics/templates/index.html
+++ b/pics/templates/index.html
@@ -5,19 +5,17 @@
     
     <h1 class="text-center">Gallery</h1>
 
-    <div class="row">
-        {% for image in images %}
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <div class="view view-eighth">
-                <div class="polaroid">
-                    <a href="{% url 'singleImage' image.id %}"><img src="{{image.image.url}}" class=" img img-responsive" alt="Image" width="500px" height="500px"></a>
-                    <div class="mask">
+    {% for image in images %}
+        
+            <div class="responsive">
+                <div class="gallery">
+                    <a href="{% url 'singleImage' image.id %}"><img src="{{image.image.url}}"  alt="Image" width="600" height="400"></a>
+                    <div class="desc">
                         <h3 class="text-center"><a href="{% url 'singleImage' image.id %}"> {{ image.image_name }} </a></h3>
                     </div>
                 </div>
             </div>
-        </div>
+        
         {% endfor %}
-    </div>
 {% endblock %}
 
