--- a/pics/templates/search.html
+++ b/pics/templates/search.html
@@ -11,19 +11,19 @@
         <h2 class="text-center">{{message}}</h2>
     {% endif %}
     
-    <div class="row">
+    
         {% for image in images %}
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <div class="">
-                <div class="polaroid">
-                    <a href="{% url 'singleImage' image.id %}"><img src="{{image.image.url}}" class=" img img-responsive" alt="Image" width="500px" height="500px"></a>
-                    <div class="mask">
+        
+            <div class="responsive">
+                <div class="gallery">
+                    <a href="{% url 'singleImage' image.id %}"><img src="{{image.image.url}}"  alt="Image" width="600" height="400"></a>
+                    <div class="desc">
                         <h3 class="text-center"><a href="{% url 'singleImage' image.id %}"> {{ image.image_name }} </a></h3>
                     </div>
                 </div>
             </div>
-        </div>
+        
         {% endfor %}
-    </div>
+    
   </div>
 {% endblock %}
