Add the copy button and its functions

--- a/pics/templates/single_image.html
+++ b/pics/templates/single_image.html
@@ -14,5 +14,6 @@
 
         <p class="text-center"> {{ image.image_description }} </p>
         <p class="text-center"> Location: {{ image.image_location}} </p>
+        <button class="btn btn-primary copy-btn" data-url="{{image.image_url}}">Copy url</button>
     </div>
 {% endblock %}
