--- a/pics/templates/single_image.html
+++ b/pics/templates/single_image.html
@@ -6,7 +6,7 @@
 <div class="container">
     <h1 class="text-center">{{ image.image_category }}</h1>
     <div class="row">
-        <img src="{{image.image.url}}" class="img-responsive" alt="">
+        <img src="{{image.image.url}}" class="img-responsive" alt="" width="100%">
     </div>
 
     <div class="row">
