--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -27,7 +27,7 @@
                         <a class="nav-link dropdown-toggle location navbar-brand" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="text-decoration: none;">Location</a>
                         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdown">
                             {% for location in locations %}
-                            <p style="margin-left:2%"><a class="dropdown-item" href="/location/{{location.location}}">{{location.location}}</a></p>       
+                                <p style="margin-left:2%"><a class="dropdown-item" href="{% url 'location' %}">{{location.location}}</a></p>       
                             {%endfor%}
                         </div>
                     </li>
